	from HTML built in, plus user-defined filtering with deffilter.

	Bugfixes: wrong error message in throw; lack of support for escaping
	backslashes in literals and regexes.

	* txr.c (version): Bumped to 037.

	* txr.1: Set version to 037 and bumped date.

	* configure: Bumped txr_ver to 037.

2011-09-26  Kaz Kylheku  <kaz@kylheku.com>

	Support &#xNNNN; hex escapes in html.  Bugfix in field formatting.
	chr function inlined.

	* filter.c (trie_value_at, trie_lookup_feed_char): Handle function
	case.
	(build_filter): New parameter, compress_p.
	(html_hex_continue, html_hex_handler): New functions.
	(filter_init): Add a function-based node to the from_html trie.

	* lib.c (chr): Function removed.
	(functionp) New function.

	* lib.h (chr): Declaration replaced with inline function.
	(functionp): Declared.

	* match.c (format_field): Bugfix: failed to apply filter
	that came in as an argument.

2011-09-26  Kaz Kylheku  <kaz@kylheku.com>

	Bugfixes: Consistent escaping in various literals. Double
	backslash codes for single backslash. Output clause can be empty.

	* parser.l (char_esc): Backslash handled.
	Use internal_error rather than abort.
	(REGCHAR, LITCHAR): Backslash added to lexical syntax.

	* parser.y (output_clause): Allow empty output clause.

2011-09-26  Kaz Kylheku  <kaz@kylheku.com>

	New feature: @(deffilter)

	Bugfix in @(throw) when non-symbol is thrown: exception message
	referred to the symbol throw rather than the erroneous object.

	* filter.c (build_filter_from_list, register_filter): New functions.

	* filter.h (register_filter): New function declared.

	* lib.c (deffilter_s): New variable defined.
	(chain): Function changed from single list argument to variable
	argument list to reduce the complexity of use.
	(do_and, and): New functions.
	(obj_init): deffilter_s initializatio added.

	* lib.h (deffilter_s, and): New declarations.
	(chain): Declaration updated to new function signature.
	(eq): Changed from macro to inline function.
